# ViaTradeClient

./: alembic.ini  local_db.sqlite3  main.py  pyproject.toml  run.py
config/: invest_id_list.txt
data/: FEES.csv  GMKN.csv  HEAD.csv  MOEX.csv  MTLR.csv  MTSS.csv  OZPH.csv  ROSN.csv  SBER.csv  T.csv  VTBR.csv  WUSH.csv  YDEX.csv  trade_history.csv
domain/: base.py  entity.py
infrastructure/repositories/: base_repository.py  sqlite_config.py  trade.py  tradecode.py  tradetype.py  user.py
migrations/: env.py
migrations/versions/: 59c50b66cd06_init_tables.py  5e42d3f1f912_init_tables.py
view/singal/: signal_tab.py
view/trade/: trade_tab.py
