[project]
name = "viatradeclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "ta>=0.11.0",
    "vittrade",
]

[tool.uv.sources]
vittrade = { path = "../VitTrade/dist/vittrade-0.1.0-py3-none-any.whl" }
