[project]
name = "viatradeclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-orm>=1.2.10",
    "streamlit>=1.49.1",
    "ta>=0.11.0",
    "vittrade",
]

[tool.uv.sources]
vittrade = { path = "../VitTrade/dist/vittrade-0.1.0-py3-none-any.whl" }
